2008-09-07  Jonathan Pryor  <jpryor@novell.com>

	* Cons.cs: Added; an immutable singly-linked list.
	* IEnumerable.cs: Add .ToCons().
	* Sequence.cs: Rename GenerateReverse()'s `func' parameter to `selector'.

2008-09-07  Jonathan Pryor  <jpryor@novell.com>

	* Object.cs: Add .Match(), an expression-oriented replacement for a sequence
	  of `if' statements.

2008-09-06  Jonathan Pryor  <jpryor@novell.com>

	* Check.cs: Add Check.ResultSelector().
	* Maybe.cs: Added.
	* Object.cs: Add .ToMaybe().
	* Sequence.cs: Change Sequence.GenerateReverse() to use Maybe<Tuple<...>> 
	  instead of Nullable<Tuple<...>>, as using Maybe.When() is shorter than
	  using Tuple.Create(...).ToNullable().

2008-09-04  Jonathan Pryor  <jpryor@novell.com>

	* Check.cs: Add Check.Composer() method.
	* Curry.cs: Rename to Delegates.cs.
	* Delegates.cs: Add .Compose() extension methods.

2008-09-03  Jonathan Pryor  <jpryor@novell.com>

	* Tuples.cs: Fix doc typo.

2008-09-03  Jonathan Pryor  <jpryor@novell.com>

	* Object.cs: Rename .Let() to .With().

2008-09-02  Jonathan Pryor  <jpryor@novell.com>

	* Object.cs: Added; adds .Let() extension method.

2008-09-02  Jonathan Pryor  <jpryor@novell.com>

	* Nullable.cs: Remove .Select().

2008-09-01  Jonathan Pryor  <jpryor@novell.com>

	* IEnumerable.cs: .ToTuple() should take an IEnumerable, not an
	  IEnumerable<T>, as the type parameter really isn't needed.
	* Nullable.cs: Added; Extension methods for manipulating nullable values.
	* Tuples.cs: Remove the CreateNullable() methods, as we can use
	  Tuple.Create(...).ToNullable() now for the same result.

2008-08-31  Jonathan Pryor  <jpryor@novell.com>

	* Curry.cs: Add XML documentation; remove Tuple null checks.
	* IEnumerable.cs: .ToTuple() now returns object, not Tuple.
	* Lambdas.cs: Flush doc changes.
	* Sequence.cs (GenerateReverse): Use Func<S,Tuple<R,S>?> instead of
	  Func<S,Tuple<R,S>> as Tuple is a struct now.
	* Tuple.cs: Major changes: Tuples are now structs, not classes; remove